# FixIQ

./: .gitignore  LICENSE  README.md  pyproject.toml
app/cli/: main.py
app/core/: anomaly_timeline.py  blast_radius.py  cascade_analyzer.py  deployment_correlator.py  evidence_chain.py  impact.py  incident_queue.py  k8s_collector.py  k8s_watcher.py  knowledge_base.py  multi_alert.py  pipeline.py  service_discovery.py  similar_incidents.py  urgency.py  verifier.py
k8s/: checkout-api.yaml  restaurant-apps.yaml
services/kitchen-service/: Dockerfile  main.py
services/order-service/: main.py
services/payment-gateway/: main.py
services/restaurant-api/: main.py
tests/: test_anomaly_timeline.py  test_blast_radius.py  test_cascade_analyzer.py  test_evidence_chain.py  test_impact.py  test_multi_alert.py  test_similar_incidents.py  test_urgency.py
tests/fixtures/alerts/: cascade_failure.json  db_connection_alert.json  high_cpu_alert.json  oomkilled_alert.json  real_oomkilled_alert.json
tests/fixtures/alerts/multi/: alerts.json
